# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
config/: test.conf
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  FriendService.cpp  UserService.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
lib/include/: mprpcconfig.hpp
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
src/include/: logger.hpp  mprpcapplication.hpp  mprpcchannel.hpp  mprpccontroller.hpp  rpcprovider.hpp
test/protobuf/: CMakeLists.txt  a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
